LPS-38219 prevent document titles in documents and media portlet from overlapping with documents below

--- a/portal-web/docroot/html/portlet/document_library/css/main.css
+++ b/portal-web/docroot/html/portlet/document_library/css/main.css
@@ -414,7 +414,10 @@
 		}
 
 		.entry-title {
+			overflow: hidden;
 			position: relative;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 		}
 
 		.entry-title-text {
